Add mobilenet model and labelmaps

--- a/mobilenet_v2.config
+++ b/mobilenet_v2.config
@@ -176,7 +176,7 @@ train_config: {
 }
 
 train_input_reader: {
-  label_map_path: "labelmap.pbtxt"
+  label_map_path: "./vortex/artifacts/labelmap.pbtxt"
   tf_record_input_reader {
     input_path: "./data/processed/Obj_Det/train.record"
   }
@@ -188,7 +188,7 @@ eval_config: {
 }
 
 eval_input_reader: {
-  label_map_path: "labelmap.pbtxt"
+  label_map_path: "./vortex/artifacts/labelmap.pbtxt"
   shuffle: false
   num_epochs: 1
   tf_record_input_reader {
